# timepix-sort-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
external_repositories/: mmap-allocator.patch
mmap_allocator_build/: CMakeLists.txt
src/: CMakeLists.txt  data_model.cpp  event_statistics.cpp  process.cpp  read.cpp
src/timepix_sort/: data_model.h  data_model_chunks.h  event_statistics.h  events.h  events_historgam.h  process.h  read.h  timepix_sort.h  utils.h
src/timepix_sort/detail/: process_chunks.h
src/timepix_sort/hardware/: tpx3.h
tests/: CMakeLists.txt  histogram_test.cpp  main.cpp  read_raw.cpp  sort_test.cpp  test_minmax.cpp  test_read_data.cpp
